Syntax_files/Syntax_ResourceQuta.yml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: production
spec:
  hard:
    requests.cpu: "1"
    requests.memory: 1Gi
    limits.cpu: "2"
    limits.memory: 2Gi


#Pod Resource Request:
apiVersion: v1
kind: Pod
metadata:
  name: production
spec:
  containers:
    - name: nginx-pod
      image: nginx
      resources:
        limits:
          memory: "800Mi"
          cpu: "800m" # 0.8 vCPU
        requests:
          memory: "600Mi"
          cpu: "400m“ # 0.4 vCPU
