Syntax_files/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: nginx-service #Replace with your service
            port:
              number: 80 #rReplace the port on which the above service is running.
  # - host: www.flipkart.com
  #   http:
  #     paths:
  #     - path: /fasion
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: fasion-service
  #           port:
  #             number: 80
