Syntax_files/Syntax_Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nginx.highlyavailable.systems
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
